# spoon_comment_viewer

./: .gitignore  Cargo.toml  README.md  config_template.json  loop.sh
mock_server/: voicevox.go
src/: bgm.rs  chatgpt.rs  coefont.rs  comment.rs  config.rs  constant.rs  database.rs  filter.rs  lib.rs  listener.rs  logger.rs  main.rs  player.rs  selenium.rs  spoon.rs  spoon_client.rs  spoon_core.rs  util.rs  voicevox.rs
src/chatgpt/: call.rs  chatgpt.rs  mod.rs  util.rs
src/models/: live_join.rs  live_like.rs  live_message.rs  live_present.rs  live_present_like.rs  live_rank.rs  live_update.rs  mod.rs  use_item.rs
src/websocket/: mod.rs  spoon_websocket.rs  websocket.rs
