[package]
name = "spoon_comment_viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
ctrlc = "3.2.2"
json = "0.12.4"
regex = "1.6.0"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.82"
thirtyfour_sync = "0.27.1"
