[package]
name = "spoon_comment_viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
ctrlc = "3.2.2"
env_logger = "0.10.0"
itertools = "0.10.5"
json = "0.12.4"
log = "0.4.17"
rand = "0.8.5"
regex = "1.6.0"
reqwest = { version = "0.11.13", features = ["blocking"] }
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.82"
thirtyfour_sync = "0.27.1"
